@@ -12,8 +12,9 @@ import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
 import javax.crypto.spec.DESedeKeySpec;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+// import sun.misc.BASE64Decoder;
+// import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 public class StringEncrypter {
 	
@@ -96,8 +97,11 @@ public class StringEncrypter {
 			byte[] cleartext = unencryptedString.getBytes( UNICODE_FORMAT );
 			byte[] ciphertext = cipher.doFinal( cleartext );
 
-			BASE64Encoder base64encoder = new BASE64Encoder();
-			return base64encoder.encode( ciphertext );
+			 //BASE64Encoder base64encoder = new BASE64Encoder();
+			 Base64.Encoder new64encoder = java.util.Base64.getMimeEncoder();
+			 //return base64encoder.encode( ciphertext );
+			 return new64encoder.encodeToString( ciphertext );
+
 		}
 		catch (Exception e)
 		{
@@ -114,8 +118,10 @@ public class StringEncrypter {
 		{
 			SecretKey key = keyFactory.generateSecret( keySpec );
 			cipher.init( Cipher.DECRYPT_MODE, key );
-			BASE64Decoder base64decoder = new BASE64Decoder();
-			byte[] cleartext = base64decoder.decodeBuffer( encryptedString );
+			 //BASE64Decoder base64decoder = new BASE64Decoder();
+			 Base64.Decoder new64decoder = java.util.Base64.getMimeDecoder();
+			//byte[] cleartext = base64decoder.decodeBuffer( encryptedString );
+			byte[] cleartext = new64decoder.decode( encryptedString );
 			byte[] ciphertext = cipher.doFinal( cleartext );
 
 			return bytes2String( ciphertext );
